--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background: radial-gradient(circle at 20% 30%, rgba(99,102,241,0.08) 0%, transparent 50%);
             animation: pulseGlow 12s infinite alternate;
         }
-        /* Toast styles */
+        /* Toast */
         #toastContainer {
             position: fixed;
             bottom: 24px;
@@ -57,7 +57,6 @@
 <body class="min-h-screen text-gray-100 flex items-center justify-center p-6 relative font-sans">
     <div class="particles"></div>
 
-    <!-- Container principal -->
     <div class="w-full max-w-7xl relative z-10">
         <div class="glass rounded-3xl p-8 md:p-12 shadow-2xl shadow-indigo-900/50 transition-all duration-500 hover:shadow-indigo-700/60">
             
@@ -92,10 +91,10 @@
                     <div class="mb-8">
                         <label class="block text-sm font-medium text-indigo-300 mb-3">Modèle IA</label>
                         <select id="modelSelect" class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass">
-                            <option value="Qwen/Qwen2.5-7B-Instruct">Qwen2.5-7B-Instruct</option>
-                            <option value="HuggingFaceTB/SmolLM3-3B">SmolLM3-3B</option>
-                            <option value="meta-llama/Llama-3.2-3B-Instruct">Llama-3.2-3B-Instruct</option>
-                            <option value="meta-llama/Meta-Llama-3-8B-Instruct">Llama-3-8B-Instruct</option>
+                            <option value="Qwen/Qwen2.5-7B-Instruct">Qwen2.5-7B-Instruct (Équilibré, excellent FR)</option>
+                            <option value="HuggingFaceTB/SmolLM3-3B">SmolLM3-3B (Ultra-rapide)</option>
+                            <option value="meta-llama/Llama-3.2-3B-Instruct">Llama-3.2-3B-Instruct (Fiable & léger)</option>
+                            <option value="meta-llama/Meta-Llama-3-8B-Instruct">Llama-3-8B-Instruct (Premium classique)</option>
                         </select>
                     </div>
 
@@ -152,11 +151,11 @@
         </div>
     </div>
 
-    <!-- Conteneur des toasts -->
+    <!-- Toasts container -->
     <div id="toastContainer"></div>
 
     <script>
-        // Fonction pour afficher un toast
+        // Toast function
         function showToast(message, type = 'success') {
             const container = document.getElementById('toastContainer');
             const toast = document.createElement('div');
@@ -167,13 +166,13 @@
             `;
             container.appendChild(toast);
 
-            // Disparaître après 3 secondes
             setTimeout(() => {
                 toast.classList.remove('show');
                 setTimeout(() => toast.remove(), 400);
             }, 3000);
         }
 
+        // Token logic
         const tokenSection = document.getElementById('tokenSection');
         const changeTokenBtn = document.getElementById('changeTokenBtn');
         const tkInput = document.getElementById('tk');
@@ -184,7 +183,6 @@
         if (savedToken) {
             tokenSection.classList.add('hidden');
             changeTokenBtn.classList.remove('hidden');
-            showToast("Token chargé depuis la mémoire", "success");
         }
 
         function showTokenField() {
@@ -193,9 +191,35 @@
             tkInput.focus();
         }
 
-        // Historique (inchangé, juste résumé)
+        // Historique
         let history = JSON.parse(localStorage.getItem('promail_history')) || [];
-        function renderHistory() { /* ... même code que précédemment ... */ }
+        function renderHistory() {
+            const list = document.getElementById('historyList');
+            list.innerHTML = '';
+            if (history.length === 0) {
+                list.innerHTML = '<p class="text-center text-indigo-400/70 py-10">Aucune transformation pour l\'instant...</p>';
+                return;
+            }
+            history.forEach((item) => {
+                const div = document.createElement('div');
+                div.className = 'p-5 glass rounded-xl cursor-pointer hover:bg-indigo-900/30 transition group';
+                div.innerHTML = `
+                    <div class="flex justify-between text-sm text-indigo-400 mb-2">
+                        <span>${item.model.split('/').pop()}</span>
+                        <span>${new Date(item.date).toLocaleString('fr-FR', {hour: '2-digit', minute:'2-digit'})}</span>
+                    </div>
+                    <div class="text-gray-300 mb-2 line-clamp-3">${item.original.substring(0,100)}${item.original.length > 100 ? '...' : ''}</div>
+                    <div class="text-white font-medium line-clamp-3">${item.result.substring(0,120)}${item.result.length > 120 ? '...' : ''}</div>
+                `;
+                div.onclick = () => {
+                    document.getElementById('resultText').innerText = item.result;
+                    document.getElementById('resultPlaceholder').classList.add('hidden');
+                    document.getElementById('resultContent').classList.remove('hidden');
+                    document.getElementById('res').scrollIntoView({ behavior: 'smooth' });
+                };
+                list.appendChild(div);
+            });
+        }
         renderHistory();
 
         function addToHistory(original, result, model) {
@@ -214,6 +238,7 @@
             }
         }
 
+        // Send function
         async function send() {
             let token = tkInput.value.trim();
             if (!token && localStorage.getItem('saved_tk')) {
@@ -237,12 +262,22 @@
             resultContent.classList.add('hidden');
             resultPlaceholder.classList.remove('hidden');
 
-            const systemPrompt = forceTu ? /* ... même prompt tutoiement forcé ... */ : /* ... prompt respectueux ... */;
+            const systemPrompt = forceTu ?
+                `Tu es un assistant qui reformule des messages en français professionnel, poli et concis (style email pro).
+Toujours utiliser le tutoiement ("tu", "toi", "ton", "ta", etc.), même si le message original est formel ou utilise "vous". Sois naturel, élégant et sympa.` :
+                `Tu es un assistant qui reformule des messages en français professionnel, poli et concis (style email pro).
+Respecte scrupuleusement le niveau de familiarité de l'original :
+- Si l'original utilise "tu" ou un ton amical/informel → garde absolument le tutoiement.
+- Si l'original utilise "vous" ou un ton formel → utilise le vouvoiement.
+- Si neutre ou ambigu → préfère le tutoiement léger et sympa.`;
 
             try {
                 const resp = await fetch("https://router.huggingface.co/v1/chat/completions", {
                     method: "POST",
-                    headers: { "Authorization": `Bearer ${token}`, "Content-Type": "application/json" },
+                    headers: {
+                        "Authorization": `Bearer ${token}`,
+                        "Content-Type": "application/json"
+                    },
                     body: JSON.stringify({
                         model: model,
                         messages: [
@@ -266,8 +301,7 @@
                 resultPlaceholder.classList.add('hidden');
                 resultContent.classList.remove('hidden');
 
-                // Sauvegarde token seulement si succès et pas déjà fait
-                if (token && !localStorage.getItem('saved_tk')) {
+                if (!localStorage.getItem('saved_tk') && token) {
                     localStorage.setItem('saved_tk', token);
                     tokenSection.classList.add('hidden');
                     changeTokenBtn.classList.remove('hidden');
