--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             color: white;
             border-color: #4f46e5;
         }
-        textarea:focus, select:focus {
+        textarea:focus, select:focus, input:focus {
             outline: none;
             border-color: #4f46e5;
             box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
@@ -80,7 +80,28 @@
         <!-- Header -->
         <div class="text-center mb-8">
             <h1 class="text-3xl font-bold text-gray-900 mb-2">Correcteur Pro</h1>
-            <p class="text-gray-500">Corrigez vos messages instantanément avec l'IA</p>
+            <p class="text-gray-500">Corrigez vos messages avec l'IA</p>
+        </div>
+
+        <!-- API Key Section (si pas sauvegardée) -->
+        <div id="apiKeySection" class="bg-yellow-50 border border-yellow-200 rounded-lg p-6 mb-6">
+            <h3 class="font-semibold text-gray-900 mb-2">🔑 Configuration requise (une seule fois)</h3>
+            <p class="text-sm text-gray-600 mb-4">
+                Obtenez votre clé API gratuite sur 
+                <a href="https://platform.openai.com/api-keys" target="_blank" class="text-indigo-600 underline">OpenAI</a>
+                (offre 5$ de crédit gratuit)
+            </p>
+            <div class="flex gap-3">
+                <input 
+                    type="password" 
+                    id="apiKey" 
+                    placeholder="sk-..." 
+                    class="flex-1 px-4 py-2 border border-gray-300 rounded-lg"
+                >
+                <button onclick="saveApiKey()" class="btn-primary px-6 py-2 text-white rounded-lg">
+                    Enregistrer
+                </button>
+            </div>
         </div>
 
         <!-- Configuration rapide -->
@@ -186,7 +207,7 @@
 
         <!-- Info -->
         <div class="mt-8 text-center text-sm text-gray-500">
-            <p>✨ Propulsé par Claude AI • Pas de token requis • Correction instantanée</p>
+            <p>✨ Propulsé par OpenAI GPT-4 • Correction instantanée</p>
             <p class="mt-1 text-xs">Raccourci : <kbd class="px-2 py-1 bg-gray-100 rounded">Ctrl + Enter</kbd> pour corriger</p>
         </div>
     </div>
@@ -195,6 +216,27 @@
         let tone = 'vous';
         let context = 'email';
         let isProcessing = false;
+
+        // Check if API key exists
+        const savedApiKey = localStorage.getItem('openai_api_key');
+        if (savedApiKey) {
+            document.getElementById('apiKeySection').style.display = 'none';
+        }
+
+        function saveApiKey() {
+            const apiKey = document.getElementById('apiKey').value.trim();
+            if (!apiKey) {
+                showToast('Entrez votre clé API', true);
+                return;
+            }
+            if (!apiKey.startsWith('sk-')) {
+                showToast('La clé API doit commencer par "sk-"', true);
+                return;
+            }
+            localStorage.setItem('openai_api_key', apiKey);
+            document.getElementById('apiKeySection').style.display = 'none';
+            showToast('✓ Clé API enregistrée !');
+        }
 
         function setTone(t) {
             tone = t;
@@ -258,8 +300,14 @@ Réponds UNIQUEMENT avec le texte simplifié, sans explication.`
         async function correct() {
             if (isProcessing) return;
             
-            const input = document.getElementById('input').value.trim();
+            const apiKey = localStorage.getItem('openai_api_key');
+            if (!apiKey) {
+                showToast('Configurez d\'abord votre clé API', true);
+                document.getElementById('apiKeySection').style.display = 'block';
+                return;
+            }
 
+            const input = document.getElementById('input').value.trim();
             if (!input) {
                 showToast('Entrez un texte à corriger', true);
                 return;
@@ -278,32 +326,36 @@ Réponds UNIQUEMENT avec le texte simplifié, sans explication.`
             outputDiv.innerHTML = '<div class="text-gray-400 text-center pt-20"><svg class="inline w-8 h-8 spinner text-indigo-600" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg><p class="mt-2">Correction en cours...</p></div>';
 
             try {
-                const response = await fetch('https://api.anthropic.com/v1/messages', {
+                const response = await fetch('https://api.openai.com/v1/chat/completions', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${apiKey}`
                     },
                     body: JSON.stringify({
-                        model: 'claude-sonnet-4-20250514',
-                        max_tokens: 1000,
+                        model: 'gpt-4o-mini',
                         messages: [
                             {
+                                role: 'system',
+                                content: getPrompt()
+                            },
+                            {
                                 role: 'user',
-                                content: `${getPrompt()}
-
-Texte à corriger :
-${input}`
+                                content: input
                             }
-                        ]
+                        ],
+                        temperature: 0.3,
+                        max_tokens: 1000
                     })
                 });
 
                 if (!response.ok) {
-                    throw new Error('Erreur de connexion à l\'API');
+                    const error = await response.json();
+                    throw new Error(error.error?.message || 'Erreur API');
                 }
 
                 const data = await response.json();
-                const result = data.content?.[0]?.text?.trim() || 'Erreur lors de la correction';
+                const result = data.choices?.[0]?.message?.content?.trim() || 'Erreur lors de la correction';
 
                 outputDiv.textContent = result;
                 document.getElementById('copyBtn').classList.remove('hidden');
@@ -311,7 +363,7 @@ ${input}`
 
             } catch (error) {
                 console.error('Erreur:', error);
-                outputDiv.innerHTML = '<div class="text-red-500 text-center pt-20">❌ Une erreur est survenue. Veuillez réessayer.</div>';
+                outputDiv.innerHTML = `<div class="text-red-500 text-center pt-20">❌ ${error.message}</div>`;
                 showToast('Erreur : ' + error.message, true);
             } finally {
                 isProcessing = false;
